welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: illegal start of simple pattern
for (case <- 1 to 5) {
     ^Poucet:17: error: '<-' expected but '}' found.
	}
        ^