welcome.lessons.welcome.loopdowhile.Poucet.scala.code
for (case <- 1 to 5) {
	for (biscuit <- 1 to 5) {
		
	}
}

if (biscuit>=3) {
	gauche();
	}
else {
	droite();
	}
	
